--- a/app.json
+++ b/app.json
@@ -4,8 +4,8 @@
     "description": "This project is really great.",
     "slug": "project2",
     "privacy": "public",
-    "sdkVersion": "25.0.0",
-    "platforms": ["ios", "android"],
+    "sdkVersion": "53.0.0",
+    "platforms": ["ios", "android", "web"],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
