--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
+    "@expo/vector-icons": "^14.1.0",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
@@ -21,8 +22,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.22.19",
-    "babel-preset-expo": "^9.0.0",
-    "@react-native-community/cli": "latest"
+    "@react-native-community/cli": "latest",
+    "babel-preset-expo": "^9.0.0"
   },
   "scripts": {
     "start": "expo start",
