FIx for vercel and added vercel-build script for Expo web

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,14 @@
 {
   "builds": [
     {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
+      "src": "web-build/**",
+      "use": "@vercel/static"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "web-build/index.html"
     }
   ]
 }
