--- a/package.json
+++ b/package.json
@@ -30,6 +30,6 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-     "build:web": "expo export:web"
+     "build:web": "expo export --platform web"
   }
 }
