Babel error fix for all platforms

--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,11 @@
   "presets": ["babel-preset-expo"],
   "env": {
     "development": {
-      // "plugins": ["transform-react-jsx-source"]
+      "plugins": [
+        ["@babel/plugin-transform-private-methods", { "loose": true }],
+        ["@babel/plugin-transform-class-properties", { "loose": true }],
+        ["@babel/plugin-transform-private-property-in-object", { "loose": true }]
+      ]
     }
   }
 }
