--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "main": "node_modules/expo/AppEntry.js",
   "private": true,
   "dependencies": {
+    "@babel/plugin-transform-private-methods": "^7.27.1",
+    "@babel/plugin-transform-react-jsx-source": "^7.27.1",
     "@expo/metro-runtime": "~5.0.4",
     "@expo/vector-icons": "^14.1.0",
+    "@react-native/babel-preset": "^0.80.1",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
@@ -30,6 +33,6 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-     "build:web": "expo export --platform web --output-dir dist"
+    "build:web": "expo export --platform web --output-dir dist"
   }
 }
