--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/plugin-transform-react-jsx-source": "^7.27.1",
     "@expo/metro-runtime": "~5.0.4",
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native/babel-preset": "^0.80.1",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.14",
